feat(style): Adding more style to the card component

--- a/src/consts.scss
+++ b/src/consts.scss
@@ -1,3 +1,8 @@
+// fonts
+$font-default: "Roboto", "Heebo", "Helvetica Neue", Helvetica, Arial, sans-serif,
+  -apple-system;
+
+// colors
 $steam-main: #2a475e;
 $steam-text-light: #c7d5e0;
 $steam-text-dark: #1b2838;
