--- a/src/components/Views/SteamGames/steamGames.scss
+++ b/src/components/Views/SteamGames/steamGames.scss
@@ -1,3 +1,18 @@
+.library-loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .loading-title {
+    font-size: 2em;
+  }
+
+  .loading-gif {
+    width: 15em;
+    height: 15em;
+  }
+}
+
 .game-card-list {
   display: flex;
   flex-wrap: wrap;
