--- a/src/components/common/GameCard/gameCard.scss
+++ b/src/components/common/GameCard/gameCard.scss
@@ -1,10 +1,14 @@
-// @import "@/consts.scss";
+@import "/src/consts.scss";
 
 .game-card {
   display: flex;
   flex: 1 1 15%;
   flex-direction: column;
   margin: 0 4em 2em 4em;
+
+  * {
+    background-color: inherit;
+  }
 
   .game-logo {
     border-radius: 2em 2em 0 0;
@@ -13,8 +17,14 @@
   .card-content {
     display: flex;
     flex-direction: column;
-    background-color: gainsboro;
-    padding-left: 1em;
+    padding: 1em;
+    border-radius: 0 0 2em 2em;
+
+    .game-name {
+      font-size: 1.5em;
+      font-weight: 400;
+      color: $steam-main;
+    }
 
     span:last-child {
       padding-bottom: 1em;
