test(virtual): Testing virtual scroll capabilities

--- a/src/components/common/GameCard/gameCard.scss
+++ b/src/components/common/GameCard/gameCard.scss
@@ -4,8 +4,9 @@
   display: flex;
   flex: 1 1 15%;
   flex-direction: column;
-  margin: 0 4em 2em 4em;
+  margin: 0 4em 0 4em;
   width: 20%;
+  // height: 250px;
 
   .game-logo {
     border-radius: 2em 2em 0 0;
