feat(card): Finishing the card components functionalities

--- a/src/components/Views/SteamGames/steamGames.scss
+++ b/src/components/Views/SteamGames/steamGames.scss
@@ -27,8 +27,12 @@
 
     .sub-title {
       font-size: 1.2em;
-      color: $steam-text-light;
     }
+  }
+
+  .sub-title {
+    font-size: 1em;
+    color: $steam-text-light;
   }
 
   .game-card-list {
